# PDF-Summarizer-System

./: .gitignore  README.md  pyproject.toml
src/pdf_summarizer/: __init__.py  __main__.py  config.py  llm.py  pdf.py  summarizer.py  tokens.py
tests/: test_cli.py  test_config.py  test_llm.py  test_pdf.py  test_summarizer.py  test_tokens.py
